Fix #app-page height on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -51,6 +51,7 @@ body {
   width: 100%;
   gap: 20px;
   align-items: center;
+  height: 100%;
 }
 
 .sidebar {
